--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 1px solid orange;
+} */
+
 body {
   width: 100%;
   height: 100%;
@@ -5,18 +9,48 @@ body {
 
 .wrapper {
   width: 1100px;
+  margin: 0 auto;
 }
 
 .header__top {
   background: #27273e;
+  min-height: 76px;
+  width: 1100px;
+  position: relative;
+}
+.header__top-logo {
+/*  border: 1px solid yellow; */
+ width: 99px;
+ height: 51px;
+ position: absolute;
+ left: 19px;
+ top: 12px;
+
+}
+
+.header__top-info {
+ /*  border: 1px solid yellow; */
+  width: 187px;
+  position: absolute;
+  right: 0;
+  top: 21px;
+  right: 21px;
 }
 
 .number {
+  margin-bottom: 6px; 
   font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 21px;
   font-style: bold;
   color: #fff;
+  /* border: 1px solid mediumvioletred; */
+  padding: 0;
+  display: inline;
+  text-decoration: none;
+}
+.number:hover {
+  color:#FAC2DB;
 }
 
 .schedule_dropped {
@@ -25,10 +59,33 @@ body {
   font-style: bold;
   font-weight: 700;
   color: #ec1e79;
+ /*  border: 1px solid olivedrab; */
+  padding-top: 0;
+  display: block;
+  width: 114px;
+  margin-top: 6px;
+  margin-left: 70px;
 }
+.schedule_dropped:hover {
+  color: #F58ABA;
+}
+
+.container {
+  
+}
+
+.container__menu-list {
+  padding: 0;
+  
+  margin-left: 20px;
+  margin-top: 67px;
+}
+
 
 .container__menu-item {
   list-style: none;
+  display: block;
+  margin-bottom: 20px;
 }
 
 .container__menu-item a {
@@ -38,21 +95,44 @@ body {
   font-style: bold;
   text-decoration: none;
   color: #ec1e79;
+  margin-left: 20px;
+  text-align: left;
+  text-decoration: underline;
+}
+
+.container__menu-item a:hover {
+  font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size:12px;
+  font-style: bold;
+  text-decoration: none;
+  color: #000;
+  margin-left: 20px;
 }
 
 .container__menu-item a:nth-child(1) {
   color: black; 
 }
 
+.container__menu {
+  width: 147px;
+  height: 114px;
+  margin-left: 0;
+}
+
 .features {
   list-style: none;
+}
+
+.container__features {
+  float: left;
 }
 
 li.features__item {
   height: 286px;
   width: 194px;
   text-align: center;
-
+  float: ;
 }
 
 .container__features h1, .container__news h1 {
@@ -63,14 +143,24 @@ li.features__item {
   font-style: bold;
 }
 
+.container__features {
+
+  width: 865px;
+  position: relative;
+  left: 202px;
+}
+
 .features__pic {
   width: 68px;
   height: 68px;
   background-color: #27273e;
   border-radius: 80px;
+  text-align: center;
+  display: inline-block;
+  margin: 0 auto;
 }
 .features__pic img {
-  
+ margin-top: 17px;
 }
 
 p.features__text-topic {
@@ -92,6 +182,10 @@ ul.features__text-list {
 }
 ul.features__text-list li {
   text-align: left;
+}
+
+.container__news {
+ 
 }
 
 ul.news__list {
