--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ ul.features__text-list {
   padding-left: 0;
 }
 
-ul.features__text-list > span {
+ul.features__text-list {
   padding-bottom: 15px;
 }
 
