--- a/style.css
+++ b/style.css
@@ -1,202 +1,228 @@
-/* * {
-  border: 1px solid orange;
-} */
+* {
+  box-sizing: border-box;
+}
 
 body {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style: none;
 }
 
 .wrapper {
-  width: 1100px;
-  margin: 0 auto;
+    width: 100%;
+    background-color: #27273e;
+}
+
+.header {
+    width: 100%;
+    background: #2d2941;
+    margin-bottom: 67px;
+   
+}
+
+.contain {
+    width: 1100px;
+    margin: 0 auto;
+    position: relative;
+  /*   border: 1px solid red; */
 }
 
 .header__top {
-  background: #27273e;
-  min-height: 76px;
-  width: 1100px;
-  position: relative;
-}
-.header__top-logo {
- width: 99px;
- height: 51px;
- position: absolute;
- left: 19px;
- top: 12px;
-
+    background-color: #27273e;
+    min-height: 76px;
+    position: relative;
 }
 
-.header__top-info {
-  width: 189px;
-  position: absolute;
-  right: 0;
-  top: 21px;
-  right: 21px;
+
+
+.header__top-item--right {
+    float: right;
+    display: inline-block;
+    width: 50%;
+    text-align: right;
 }
+
+.header__top-item--left {
+    
+    display: inline-block;
+    width: 50%;
+}
+.header__top-item--left img {
+    padding-top: 12px;
+    padding-left: 19px;
+}
+
+.contacts {
+    display: inline-block;
+    padding-right: 21px;
+    padding-top: 21px;
+}
+
+.clearfix:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.header__main-pic {
+    background-color: #2d2941;
+    height: 359px;
+}
+
+
 
 .number {
-  margin-bottom: 6px; 
-  font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-  font-weight: 700;
-  font-size: 21px;
-  color: #fff;
-  padding: 0;
-  display: inline;
-  text-decoration: none;
+    font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 21px;
+    color: #fff;
+    padding: 0;
+    display: inline;
+    text-decoration: none;
 }
+
 .number:hover {
-  color:#FAC2DB;
+    color: #FAC2DB;
 }
 
 .schedule_dropped {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-  color: #ec1e79;
-  padding-top: 0;
-  display: block;
-  width: 136px;
-  margin-top: 6px;
-  margin-left: 70px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    color: #ec1e79;
+    padding-top: 0;
+    display: block;
 }
+
 .schedule_dropped:hover {
-  color: #F58ABA;
+    color: #F58ABA;
 }
 
-.container {
 
-  margin-top: 0;
-  position: relative;
+
+.container__menu {
+    float: left;
+    width: 20%;
+
 }
 
-.container__menu-list {
-  padding: 0;
-  
-  margin-left: 20px;
-  margin-top: 67px;
+.container__allcontent {
+    float: left;
+    width: 80%;
 }
-
 
 .container__menu-item {
-  list-style: none;
-  display: block;
-  margin-bottom: 32px;
-  text-align: left;
-  padding-left: 0;
+    list-style: none;
+    display: block;
+    margin-bottom: 32px;
+    text-align: left;
+    padding-left: 0;
 }
 
 .container__menu-item a {
-  font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-  font-weight: 700;
-  font-size:12px;
-  text-decoration: none;
-  color: #ec1e79;
-  margin-left: 0;
-  text-transform: uppercase;
+    font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 12px;
+    text-decoration: none;
+    color: #ec1e79;
+    margin-left: 0;
+    text-transform: uppercase;
 }
 
 .container__menu-item a:hover {
-  text-decoration: none;
-  color: #000;
-}
-.container__menu-item img {
-  text-decoration-line: line-through;
-  margin-right: 20px;
-  vertical-align: text-bottom;
+    text-decoration: none;
+    color: #000;
 }
 
-.container__menu {
-  width: 147px;
-  height: 114px;
-  margin-left: 0;
+.container__menu-item img {
+    margin-right: 20px;
+    vertical-align: text-bottom;
 }
 
 .features {
-  list-style: none;
-  display: inline-block;
+    list-style: none;
+    display: block;
 }
 
-
 .container__features {
-  float: left;
-
-  position: absolute;
-  top: -150px;
-  left: 75px;
+    
 }
 
 li.features__item {
-  height: 286px;
-  width: 194px;
-  float: left;
-  text-align: center;
-  margin: 0 auto;
+    height: 286px;
+    width: 194px;
+    float: left;
+    text-align: center;
+    margin: 0 auto;
 }
 
-li.features__item:nth-child(2), li.features__item:nth-child(3) {
-  margin-left: 65px;
+li.features__item:nth-child(2),
+li.features__item:nth-child(3) {
+    margin-left: 65px;
 }
 
-
-
-.container__features h1, .container__news h1 {
-  color: #221f1f;
-  font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-  font-weight: 700;
-  font-size: 49px;
+.container__features h1,
+.container__news h1 {
+    color: #221f1f;
+    font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 49px;
 }
 
-.container__features {
-
-  width: 865px;
-  position: relative;
-  left: 202px;
-}
+.container__features {}
 
 .features__pic {
-  width: 68px;
-  height: 68px;
-  background-color: #27273e;
-  border-radius: 80px;
-  text-align: center;
-  display: inline-block;
-  margin: 0 auto;
+    width: 68px;
+    height: 68px;
+    background-color: #27273e;
+    border-radius: 80px;
+    text-align: center;
+    display: inline-block;
+    margin: 0 auto;
 }
+
 .features__pic img {
- margin-top: 17px;
+    margin-top: 17px;
 }
 
 p.features__text-topic {
-  color: #212121;
-  font-size: 11px;
-  font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-  font-weight: 700;
-  padding-top: 32px;
-  margin-top: 0;
-  margin-bottom: 28px;
-  text-transform: uppercase;
+    color: #212121;
+    font-size: 11px;
+    font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    padding-top: 32px;
+    margin-top: 0;
+    margin-bottom: 28px;
+    text-transform: uppercase;
 }
 
 ul.features__text-list {
-  color: #221f1f;
-  font-size: 18px;
-  font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  list-style: disc;
-  text-align: center;
-  padding-left: 0;
+    color: #221f1f;
+    font-size: 18px;
+    font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    list-style: disc;
+    text-align: center;
 }
 
 ul.features__text-list {
-  padding-bottom: 15px;
+    padding-bottom: 15px;
 }
 
 ul.features__text-list li {
-  text-align: left;
-  margin-left: 20px;
-  padding: 10px;
-  padding-top: 15px;
+    text-align: left;
+    margin-left: 20px;
+    padding: 10px;
+    padding-top: 15px;
 }
 
 .container__news {
