--- a/reviews-style.css
+++ b/reviews-style.css
@@ -1,107 +1,48 @@
-body {
+body, html {
   width: 100%;
   height: 100%;
-}
-
-.wrapper  {
-  width: 1100px;
-  margin: 0 auto;
-}
-
-.header {
-  background: #27273e;
-  min-height: 76px;
-  width: 1100px;
-  position: relative;
-}
-
-.header-logo {
-   width: 99px;
-   height: 51px;
-   position: absolute;
-   left: 19px;
-   top: 12px;
-}
-
-.header-info {
-   width: 189px;
-   position: absolute;
-   right: 0;
-   top: 21px;
-   right: 21px;
- }
-
- .number {
-  margin-bottom: 6px; 
   font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-  font-weight: 700;
-  font-size: 21px;
-  font-style: bold;
-  color: #fff;
-  padding: 0;
-  display: inline;
-  text-decoration: none;
-}
-.number:hover {
-  color:#FAC2DB;
-}
-
-.schedule_dropped {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  font-style: bold;
-  font-weight: 700;
-  color: #ec1e79;
-  padding-top: 0;
-  display: block;
-  width: 114px;
-  margin-top: 6px;
-  margin-left: 70px;
-}
-.schedule_dropped:hover {
-  color: #F58ABA;
-}
-
-.container {
-  min-height: 500px;
-}
-
-.reviews__list-item {
-  list-style: none;
-}
-
-
-
-.container__separation-block {
-  background-color: #27273e;
-  height: 174px;
-  margin-bottom: 10px;
-  position: relative;
-
-}
-
-.container__separation-block p {
-  display: inline-block;
-  color: #fff;
-  font-family: "Gotham Pro", Arial, Helvetica, sans-serif; 
-  font-size: 18px;
   font-weight: 300;
-  font-style: normal;
-  width: 617px;
-  position: absolute;
-  top: 48px;
-  left: 233px;
-  margin-top: 0;
 }
 
-.container__separation-block p span {
-  color: #ec1e79;
-  font-family: "Gotham Pro", Arial, Helvetica, sans-serif; 
-  font-size: 18px;
-  font-weight: 700;
-  font-style: bold;
+.container__menu {
+  float: left;
+  width: 15%;
 }
 
-.form {
-  background-color: #f5f5f5;
+.content {
+  float: left;
+  width: 85%;
+}
+
+.content__reviews-item {
+  margin-bottom: 50px;
+}
+
+.reviews-item__avatar {
+  float: left;
+}
+
+.reviews-item__avatar img {
+  border-radius: 80px;
+  width: 160px;
+  height: 160px;
+}
+
+.container__separating-block {
+  background-color: #27273e;
+  min-height: 174px;
+}
+
+.container__separating-block p {
+  font-size: 16px;
+  display: block;
+  color: white;
+  width: 611px;
+  padding-left: 233px;
+  padding-top: 48px;
+}
+
+.container__pages {
+  text-align: center;
 }
