--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
       width: 100%;
       height: 100%;
       padding: 0;
+
   }
   
   ul {
@@ -111,13 +112,14 @@
   
   .container__menu {
       float: left;
-      width: 20%;
-  
+      width: 15%;
+      padding-left: 20px;
   }
   
   .container__allcontent {
       float: left;
-      width: 80%;
+      width: 85%;
+
   }
   
   .container__menu-item {
@@ -151,11 +153,10 @@
   .features {
       list-style: none;
       display: block;
+      padding-left: 70px;
   }
   
-  .container__features {
-      
-  }
+ 
   
   li.features__item {
       height: 286px;
@@ -169,7 +170,14 @@
   li.features__item:nth-child(3) {
       margin-left: 65px;
   }
-  
+
+   .container__features h1{
+      margin-top: 0;
+      margin-left: 35px;
+      padding-bottom: 10px;
+      padding-top: -20px;
+  }
+
   .container__features h1,
   .container__news h1 {
       color: #221f1f;
@@ -225,25 +233,30 @@
       padding-top: 15px;
   }
   
-  .container__news {
-   
-  }
-  
+.container__news {
+    margin-top: 90px;
+    margin-left: 30px;
+}
+
   ul.news__list {
     list-style: none;
+    margin-top: 65px;
+  }
 
+  .news__item  {
+      margin-bottom: 62px;
+  }
+
+ .news__img  {
+   display: block;
+   float: left;
+   width: 160px;
+   height: 160px;
   }
 
   .news__content {
-      float: left;
-      padding-left: 0;
-  }
-
- .news__img {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    float: left;
+      display: block;
+      margin-left: 20px;
   }
   
   div.news__content div {
@@ -266,6 +279,10 @@
     font-weight: 700;
   }
   
+.container__pages-list {
+    text-align: center;
+}
+
   ul.container__pages-list li {
     list-style: none;
     display: inline-block;
