--- a/style.css
+++ b/style.css
@@ -1,27 +1,28 @@
 * {
     box-sizing: border-box;
   }
-  
-  body {
+  html,body {
       width: 100%;
       height: 100%;
-      padding: 0;
-
   }
+ 
   
   ul {
       margin: 0;
       padding: 0;
   }
   
-  li {
-      list-style: none;
+  h1 {
+      margin: 0;
   }
+ 
   
-  .wrapper {
-      width: 100%;
-      background-color: #27273e;
-  }
+.wrapper {
+    min-width: 1100px;
+    overflow: hidden;
+}
+
+
   
   .header {
       width: 100%;
@@ -58,7 +59,7 @@
       width: 50%;
   }
   .header__top-item--left img {
-      padding-top: 12px;
+      padding-top: 17px;
       padding-left: 19px;
   }
   
@@ -76,7 +77,7 @@
   
   .header__main-pic {
       background-color: #2d2941;
-      height: 359px;
+      height: 363px;
   }
   
   
@@ -153,28 +154,25 @@
   .features {
       list-style: none;
       display: block;
-      padding-left: 70px;
+      padding-left: 40px;
   }
   
  
   
   li.features__item {
-      height: 286px;
-      width: 194px;
-      float: left;
-      text-align: center;
-      margin: 0 auto;
+    float: left;
+    text-align: center;
+    margin: 0 auto;
+    margin-right: 40px;
+    margin-bottom: -13px;
   }
   
-  li.features__item:nth-child(2),
-  li.features__item:nth-child(3) {
-      margin-left: 65px;
-  }
+ 
 
    .container__features h1{
-      margin-top: 0;
-      margin-left: 35px;
-      padding-bottom: 10px;
+      margin-top: -6px;
+      margin-left: 33px;
+      padding-bottom: 17px;
       padding-top: -20px;
   }
 
@@ -184,9 +182,18 @@
       font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
       font-weight: 700;
       font-size: 49px;
+      padding-top: 0;
   }
   
   .container__features {}
+
+  .features__text {
+    width: 230px;
+    margin: 0 auto;
+    font-weight: normal;
+    font-size: 18px;
+    list-style-type: none;
+  }
   
   .features__pic {
       width: 68px;
@@ -196,45 +203,66 @@
       text-align: center;
       display: inline-block;
       margin: 0 auto;
+      margin-bottom: 27px;
   }
   
   .features__pic img {
       margin-top: 17px;
   }
-  
-  p.features__text-topic {
-      color: #212121;
-      font-size: 11px;
-      font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-      font-weight: 700;
-      padding-top: 32px;
-      margin-top: 0;
-      margin-bottom: 28px;
-      text-transform: uppercase;
+
+  .features__text-topic {
+    font-family: "Gotham Pro", Arial, Helvetica, sans-serif;    
+    font-weight: bold;
+    font-size: 12px;
+    letter-spacing: 1.7px;
+    text-transform: uppercase;
+    color: #212121;
+  }
+
+  .features__text-topic2 {
+    font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+    margin-top: 15px;
+    font-size: 16px;
+    line-height: 1.9em;
+    letter-spacing: 1.5px;
+    margin-bottom: 0;
+  }
+
+  .features__text-item {
+    margin-top: 5px;
+    font-size: 18px;
+    text-align: left;
+    position: relative;
+    padding-left: 36px;
+    line-height: 1.6em;
   }
   
   ul.features__text-list {
-      color: #221f1f;
-      font-size: 18px;
-      font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-      font-weight: 400;
-      list-style: disc;
-      text-align: center;
+    color: #221f1f;
+    font-size: 18px;
+    font-family: "Gotham Pro", Arial,Helvetica, sans-serif;
+    font-weight: 400;
+    list-style: disc;
+   
+    margin-left: 16px;
+    padding-left: 0;
+    margin-bottom: 42px;
   }
   
   ul.features__text-list {
-      padding-bottom: 15px;
+      padding-bottom: 5px;
   }
   
   ul.features__text-list li {
       text-align: left;
       margin-left: 20px;
       padding: 10px;
-      padding-top: 15px;
   }
+
+
   
 .container__news {
-    margin-top: 90px;
+    margin-top: 0;
     margin-left: 30px;
 }
 
@@ -244,7 +272,7 @@
   }
 
   .news__item  {
-      margin-bottom: 62px;
+      margin-bottom: 88px;
   }
 
  .news__img  {
@@ -252,11 +280,12 @@
    float: left;
    width: 160px;
    height: 160px;
+   margin-right: 15px;
   }
 
-  .news__content {
+  .news__content {  
       display: block;
-      margin-left: 20px;
+
   }
   
   div.news__content div {
@@ -332,6 +361,7 @@
     color: white;
     position: relative;
     height: 77px;
+
   }
   
   .footer__social {
