--- a/reviews-style.css
+++ b/reviews-style.css
@@ -16,11 +16,33 @@ body, html {
 }
 
 .content__reviews-item {
-  margin-bottom: 50px;
+  float: left;
+  margin-bottom: 29px;
+  border-bottom: 2px solid #f5f5f5;
 }
 
+.content__reviews-heading {
+  font-size: 49px;
+}
+
+
 .reviews-item__avatar {
-  float: left;
+  width: 160px;
+  height: 160px;
+  display: inline-block;
+}
+
+.reviews-item__nophoto {
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+}
+
+.reviews-item__nophoto-pic {
+  background: url("./img/reviews/avatar3.png") center center no-repeat;
+  width: 100%;
+  height: 100%;
 }
 
 .reviews-item__avatar img {
@@ -29,20 +51,152 @@ body, html {
   height: 160px;
 }
 
+.reviews-item__text {
+  font-size: 18px;
+  margin-left: 19px;
+  float: right;
+  max-width: 700px;
+}
+
+.reviews-item__text-date {
+  font-size: 14px;
+  margin-bottom: 9px;
+}
+
+.reviews-item__text-name {
+  font-weight: 700;
+}
+
+.reviews-item__text-comment {
+  color: #221f1f;
+  font-weight: 300;
+  line-height: 30px;
+  display: block;
+  margin-top: 9px;
+}
+
+
+/* SEPARATING BLOCK */
+.container__separating {
+  background-color: #27273e;
+  width: 100%;
+}
+
 .container__separating-block {
   background-color: #27273e;
   min-height: 174px;
 }
 
-.container__separating-block p {
-  font-size: 16px;
-  display: block;
-  color: white;
-  width: 611px;
-  padding-left: 233px;
-  padding-top: 48px;
+.container__separating-block-inner {
+  width: 100%;
+  min-height: 174px;
+  background: url("./img/pattern.png") center center no-repeat;
 }
 
-.container__pages {
-  text-align: center;
+.separating-block-text {
+  font-size: 18px;
+  display: block;
+  color: white;
+  width: 613px;
+  line-height: 30px;
+  padding-top: 48px;
+  margin-left: 233px;
+}
+
+.separating-block-text-bold {
+  color: #ec1e79;
+  font-weight: 700;
+}
+
+
+
+.review-adding__block {
+  margin-left: 200px;
+  margin-bottom: 50px;
+}
+
+.review-adding__block {
+  width: 704px;
+  background-color: #f5f5f5;
+  height: 429px;
+  border-radius: 5px;
+  
+}
+
+.review-adding-heading {
+  font-size: 49px;
+  padding-top: 51px;
+  padding-left: 70px;
+}
+
+.review-adding__name {
+  display: inline-block;
+
+}
+
+.review-adding__link-vk {
+  display: inline-block;
+
+}
+
+.review-adding__input {
+  color: #221f1f;
+  width: 271px;
+  height: 47px;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  padding-left: 5px;
+}
+
+.review__input_left {
+  margin-left: 69px;
+}
+
+.review__input_right {
+  margin-right: 70px;
+}
+
+.review-adding__textform {
+  color: #221f1f;
+  margin-left: 69px;
+  margin-top: 17px;
+}
+
+.review-adding__textarea {
+  border: 1px solid #ec1e79;
+  border-radius: 3px;
+  width: 563px;
+  height: 92px;
+  padding-left: 10px;
+  vertical-align: text-top;
+
+}
+
+.review-adding__radio-buttons {
+  margin-left: 69px;
+  margin-top: 17px;
+  max-width: 563px;
+}
+
+.review-adding__radio-buttons__question {
+  
+}
+
+.review-adding__two-buttons {
+  margin-top: 10px;
+}
+
+.review-adding__button-submit {
+  float: right;
+  margin-top: -43px;
+  background-color: #27273e;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2.4px;
+  width: 141px;
+  height: 47px;
+  border: 1px solid #27273e;
+  border-radius: 3px;
 }
