--- a/reviews-style.css
+++ b/reviews-style.css
@@ -5,6 +5,8 @@ body, html {
   font-weight: 300;
 }
 
+
+
 .container__menu {
   float: left;
   width: 15%;
@@ -108,19 +110,14 @@ body, html {
   font-weight: 700;
 }
 
-
-
-.review-adding__block {
-  margin-left: 200px;
-  margin-bottom: 50px;
-}
-
 .review-adding__block {
   width: 704px;
   background-color: #f5f5f5;
   height: 429px;
   border-radius: 5px;
-  
+  margin-left: 200px;
+  margin-bottom: 50px;
+  margin-top: 57px;
 }
 
 .review-adding-heading {
@@ -141,7 +138,7 @@ body, html {
 
 .review-adding__input {
   color: #221f1f;
-  width: 271px;
+  width: 267px;
   height: 47px;
   border: 1px solid #fff;
   border-radius: 3px;
@@ -153,7 +150,7 @@ body, html {
 }
 
 .review__input_right {
-  margin-right: 70px;
+  margin-left: 23px;
 }
 
 .review-adding__textform {
@@ -199,4 +196,5 @@ body, html {
   height: 47px;
   border: 1px solid #27273e;
   border-radius: 3px;
+  cursor: pointer;
 }
