--- a/reviews-style.css
+++ b/reviews-style.css
@@ -5,7 +5,29 @@ body, html {
   font-weight: 300;
 }
 
+.breadcrumbs__item {
+  list-style: none;
+  display: inline-block;
+  font-style: italic;
+  font-size: 14px;
+}
 
+.breadcrumbs__item:after {
+  content: "/";
+}
+
+.breadcrumbs__item:last-child:after {
+  display: none;
+}
+
+.breadcrumbs__item-link {
+  color: #ec1e79;
+}
+
+.breadcrumbs__item-link--active {
+  text-decoration: none;
+  color: #221f1f;
+}
 
 .container__menu {
   float: left;
@@ -110,6 +132,9 @@ body, html {
   font-weight: 700;
 }
 
+
+/* FORM REVIEW */
+
 .review-adding__block {
   width: 704px;
   background-color: #f5f5f5;
@@ -166,7 +191,7 @@ body, html {
   height: 92px;
   padding-left: 10px;
   vertical-align: text-top;
-
+  padding-top: 10px;
 }
 
 .review-adding__radio-buttons {
