--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -2,10 +2,12 @@
 .header {
   width: 100%;
   background: #2d2941;
-  margin-bottom: 67px;
+/*   margin-bottom: 67px; */
 }
 
-
+.main__container {
+  margin-top: 67px;
+}
 
 .header__top {
   background-color: #27273e;
