--- a/reviews-style.css
+++ b/reviews-style.css
@@ -50,6 +50,7 @@ body, html {
 .content__reviews-heading {
   font-size: 49px;
   margin-top: 8px;
+  color: #221f1f;
 }
 
 
@@ -152,6 +153,8 @@ body, html {
   font-size: 49px;
   padding-top: 51px;
   padding-left: 70px;
+  margin-bottom: 11px;
+  color: #221f1f;
 }
 
 .review-adding__name {
